--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -1,7 +1,7 @@
 {
   "account.block": "ブロック",
   "account.block_domain": "{domain}全体を非表示",
-  "account.disclaimer": "このユーザーは他のインスタンスに所属しているため、数字が正確で無い場合があります。",
+  "account.disclaimer": "このカリスマは他のインスタンスに所属しているため、数字が正確で無い場合があります。",
   "account.edit_profile": "プロフィールを編集",
   "account.follow": "フォロー",
   "account.followers": "フォロワー",
@@ -18,12 +18,12 @@
   "account.unfollow": "フォロー解除",
   "account.unmute": "ミュート解除",
   "boost_modal.combo": "次からは{combo}を押せば、これをスキップできます。",
-  "column.blocks": "ブロックしたユーザー",
+  "column.blocks": "ブロックしたカリスマ",
   "column.community": "ローカルタイムライン",
   "column.favourites": "お気に入り",
   "column.follow_requests": "フォローリクエスト",
   "column.home": "ホーム",
-  "column.mutes": "ミュートしたユーザー",
+  "column.mutes": "ミュートしたカリスマ",
   "column.notifications": "通知",
   "column.public": "連合タイムライン",
   "column_back_button.label": "戻る",
@@ -34,7 +34,7 @@
   "compose_form.lock_disclaimer": "あなたのアカウントは{locked}になっていません。誰でもあなたをフォローすることができ、フォロワー限定の投稿を見ることができます。",
   "compose_form.lock_disclaimer.lock": "非公開",
   "compose_form.placeholder": "今なにしてる？",
-  "compose_form.privacy_disclaimer": "あなたの非公開トゥートは返信先ユーザーが所属する{domains}に送信されます。{domainsCount, plural, one {このサーバー} other {これらのサーバー}}は信頼できますか？　投稿のプライバシー保護はMastodonサーバー内でのみ有効です。{domains}がMastodonインスタンスでない場合、あなたの投稿がプライベートなものとして扱われず、ブーストされたり予期しないユーザーに見られる可能性があります。",
+  "compose_form.privacy_disclaimer": "あなたの非公開トゥートは返信先カリスマが所属する{domains}に送信されます。{domainsCount, plural, one {このサーバー} other {これらのサーバー}}は信頼できますか？　投稿のプライバシー保護はMastodonサーバー内でのみ有効です。{domains}がMastodonインスタンスでない場合、あなたの投稿がプライベートなものとして扱われず、ブーストされたり予期しないカリスマに見られる可能性があります。",
   "compose_form.publish": "トゥート",
   "compose_form.publish_loud": "{publish}！",
   "compose_form.sensitive": "メディアを閲覧注意としてマークする",
@@ -61,18 +61,18 @@
   "emoji_button.travel": "旅行と場所",
   "empty_column.community": "ローカルタイムラインはまだ使われていません。何か書いてみましょう！",
   "empty_column.hashtag": "このハッシュタグはまだ使われていません。",
-  "empty_column.home": "まだ誰もフォローしていません。{public}を見に行くか、検索を使って他のユーザーを見つけましょう。",
+  "empty_column.home": "まだ誰もフォローしていません。{public}を見に行くか、検索を使って他のカリスマを見つけましょう。",
   "empty_column.home.inactivity": "あなたのホームフィードにはなにもありません。あなたがしばらくの間アクティブではなかった場合はすぐ元通りになります。",
   "empty_column.home.public_timeline": "連合タイムライン",
   "empty_column.notifications": "まだ通知がありません。他の人とふれ合って会話を始めましょう。",
-  "empty_column.public": "ここにはまだ何もありません！公開で何かを投稿したり、他のインスタンスのユーザーをフォローしたりしていっぱいにしましょう！",
+  "empty_column.public": "ここにはまだ何もありません！公開で何かを投稿したり、他のインスタンスのカリスマをフォローしたりしていっぱいにしましょう！",
   "follow_request.authorize": "許可",
   "follow_request.reject": "拒否",
   "getting_started.appsshort": "アプリ",
   "getting_started.faq": "よくある質問",
   "getting_started.heading": "スタート",
   "getting_started.open_source_notice": "Mastodonはオープンソースソフトウェアです。誰でもGitHub（{github}）から開発に参加したり、問題を報告したりできます。",
-  "getting_started.userguide": "ユーザーガイド",
+  "getting_started.userguide": "カリスマガイド",
   "home.column_settings.advanced": "上級者向け",
   "home.column_settings.basic": "基本設定",
   "home.column_settings.filter_regex": "正規表現でフィルター",
@@ -83,15 +83,15 @@
   "loading_indicator.label": "読み込み中...",
   "media_gallery.toggle_visible": "表示切り替え",
   "missing_indicator.label": "見つかりません",
-  "navigation_bar.blocks": "ブロックしたユーザー",
+  "navigation_bar.blocks": "ブロックしたカリスマ",
   "navigation_bar.community_timeline": "ローカルタイムライン",
   "navigation_bar.edit_profile": "プロフィールを編集",
   "navigation_bar.favourites": "お気に入り",
   "navigation_bar.follow_requests": "フォローリクエスト",
   "navigation_bar.info": "このインスタンスについて",
   "navigation_bar.logout": "ログアウト",
-  "navigation_bar.mutes": "ミュートしたユーザー",
-  "navigation_bar.preferences": "ユーザー設定",
+  "navigation_bar.mutes": "ミュートしたカリスマ",
+  "navigation_bar.preferences": "カリスマ設定",
   "navigation_bar.public_timeline": "連合タイムライン",
   "notification.favourite": "{name}さんがあなたのトゥートをお気に入りに登録しました",
   "notification.follow": "{name}さんにフォローされました",
@@ -123,11 +123,11 @@
   "onboarding.page_six.read_guidelines": "{guidelines}を読むことを忘れないようにしてください。",
   "onboarding.page_six.various_app": "様々なモバイルアプリ",
   "onboarding.page_three.profile": "「プロフィールを編集」から、あなたの自己紹介や表示名を変更できます。またそこでは他の設定ができます。",
-  "onboarding.page_three.search": "検索バーで、{illustration}や{introductions}のように特定のハッシュタグの投稿を見たり、ユーザーを探したりできます。",
+  "onboarding.page_three.search": "検索バーで、{illustration}や{introductions}のように特定のハッシュタグの投稿を見たり、カリスマを探したりできます。",
   "onboarding.page_two.compose": "フォームから投稿できます。イメージや、公開範囲の設定や、表示時の警告の設定は下部のアイコンから行なえます。",
   "onboarding.skip": "スキップ",
   "privacy.change": "投稿のプライバシーを変更",
-  "privacy.direct.long": "メンションしたユーザーだけに公開",
+  "privacy.direct.long": "メンションしたカリスマだけに公開",
   "privacy.direct.short": "ダイレクト",
   "privacy.private.long": "フォロワーだけに公開",
   "privacy.private.short": "非公開",
@@ -139,7 +139,7 @@
   "report.heading": "新規通報",
   "report.placeholder": "コメント",
   "report.submit": "通報する",
-  "report.target": "問題のユーザー",
+  "report.target": "問題のカリスマ",
   "search.placeholder": "検索",
   "search_results.total": "{count, number}件の結果",
   "status.cannot_reblog": "この投稿はブーストできません",
