--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -37,10 +37,10 @@ ja:
         setting_delete_modal: トゥートを削除する前に確認ダイアログを表示する
         severity: 重大性
         type: インポートする項目
-        username: ユーザー名
+        username: カリスマ名
       interactions:
         must_be_follower: フォロワー以外からの通知をブロック
-        must_be_following: フォローしていないユーザーからの通知をブロック
+        must_be_following: フォローしていないカリスマからの通知をブロック
       notification_emails:
         digest: タイムラインからピックアップしてメールで通知する
         favourite: お気に入りに登録された時にメールで通知する
